[gd_scene load_steps=4 format=3 uid="uid://dg66lkhiv7708"]

[ext_resource type="Texture2D" uid="uid://dgdg538ha2ou3" path="res://MainMenu/sw.png" id="1_7dig5"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_ydfr7"]
[ext_resource type="Texture2D" uid="uid://b3s836hmrqct2" path="res://MainMenu/A_black_image.jpg" id="2_wnt3n"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
script = ExtResource("1_ydfr7")

[node name="BlackBackground" type="Sprite2D" parent="."]
position = Vector2(538, 305)
scale = Vector2(5.5625, 5.10833)
texture = ExtResource("2_wnt3n")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.864216, 0.905028)
texture = ExtResource("1_7dig5")

[node name="Lobby" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -1345.0
offset_top = -1285.0
offset_right = 2299.0
offset_bottom = 1615.0
color = Color(0.419608, 0.482353, 0.533333, 1)

[node name="ColorRect" type="ColorRect" parent="Lobby"]
layout_mode = 0
offset_left = 1931.0
offset_top = 1307.0
offset_right = 2405.0
offset_bottom = 1869.0
color = Color(0.458824, 0.458824, 0.458824, 1)

[node name="ConnectedPlayers" type="ItemList" parent="Lobby"]
layout_mode = 0
offset_left = 1967.0
offset_top = 1325.0
offset_right = 2370.0
offset_bottom = 1634.0

[node name="StartGameButton" type="Button" parent="Lobby"]
layout_mode = 0
offset_left = 1968.0
offset_top = 1682.0
offset_right = 2371.0
offset_bottom = 1758.0
text = "Start Game"

[node name="QuitGameButton" type="Button" parent="Lobby"]
layout_mode = 0
offset_left = 1968.0
offset_top = 1769.0
offset_right = 2371.0
offset_bottom = 1845.0
text = "Quit Game"

[node name="Menu" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 342.0
offset_right = 307.0
offset_bottom = 648.0
color = Color(0.356863, 0.356863, 0.356863, 1)

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 0
offset_right = 307.0
offset_bottom = 206.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2

[node name="JoinButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="HostButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="SetUsernameButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Set Username"

[node name="LineEdit" type="LineEdit" parent="Menu/MarginContainer/VBoxContainer/SetUsernameButton"]
visible = false
layout_mode = 0
offset_top = 128.0
offset_right = 308.0
offset_bottom = 164.0

[node name="Label" type="Label" parent="Menu/MarginContainer/VBoxContainer/SetUsernameButton/LineEdit"]
layout_mode = 0
offset_left = 2.0
offset_top = 41.0
offset_right = 165.0
offset_bottom = 64.0
text = "Hit Enter When Done"

[node name="SettingsButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Button" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Lobby/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/SetUsernameButton" to="." method="_on_set_username_button_pressed"]
